--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -22,13 +22,13 @@
     <div class="card pull-up">
       <div class="card-content">
         <div class="card-body">
-          <div class="media d-flex" (click)="handleDashboardHeadNav('Active-Shops')">
+          <div class="media d-flex" (click)="handleDashboardHeadNav('Total-Products')">
             <div class="align-self-center">
               <i class="la la-user-md font-large-2 warning"></i>
             </div>
             <div class="media-body text-right">
-              <h5 class="text-muted text-bold-500">Active Shops</h5>
-              <h3 class="text-bold-600">{{reportArray?.active_shops}}</h3>
+              <h5 class="text-muted text-bold-500">Total Products</h5>
+              <h3 class="text-bold-600">{{reportArray?.total_products}}</h3>
             </div>
           </div>
         </div>
