--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -1,37 +1,56 @@
-<div id="LoginForm">
-  <div class="container">
-    <h1 class="form-heading">login Form</h1>
-    <div class="login-form">
-      <div class="main-div">
-        <div class="panel">
-          <h2>Admin Login</h2>
-          <p>Please enter your email and password</p>
-        </div>
-        <form id="Login">
-
-          <div class="form-group">
-
-
-            <input type="email" class="form-control" id="inputEmail" placeholder="Email Address">
-
-          </div>
-
-          <div class="form-group">
-
-            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-
-          </div>
-          <div class="forgot">
-            <a href="reset.html">Forgot password?</a>
-          </div>
-          <button type="submit" class="btn btn-primary">Login</button>
-
-        </form>
+<body class="vertical-layout vertical-menu-modern 1-column  blank-page" id="LoginForm" data-open="click"
+  data-menu="vertical-menu-modern" data-col="1-column">
+  <!-- BEGIN: Content-->
+  <div class="app-content content">
+    <div class="content-wrapper">
+      <div class="content-header row mb-1">
       </div>
-      <p class="botto-text"> Designed by Sunil Rajput</p>
+      <div class="content-body">
+        <section class="flexbox-container">
+          <div class="col-12 d-flex align-items-center justify-content-center">
+            <div class="col-lg-4 col-md-8 col-10 box-shadow-2 p-0">
+              <div class="card border-grey border-lighten-3 ">
+
+                <div class="login-form">
+                  <div class="main-div">
+                    <div class="panel">
+                      <h2>Reset Password Super Admin </h2>
+                      <p>Please enter your new password</p>
+                    </div>
+                    <form id="Login">
+
+                      <div class="form-group">
+                        <input type="password" class="form-control" placeholder="Enter Password" name="password"
+                          [(ngModel)]="credentials.password" required>
+                      </div>
+
+                      <div class="form-group">
+                        <input type="password" class="form-control" placeholder="Confirm Passowrd" name="confirmPass"
+                          [(ngModel)]="credentials.password_confirmation" required>
+                      </div>
+                      <div class="forgot">
+                        <a routerLink="/login" class="card-link">Go Back to Login</a>
+                      </div>
+                      <button type="button" (click)="handleNewpassword()" class="btn btn-outline-info btn-block"
+                        [disabled]="credentials.password === '' || credentials.password_confirmation === ''"><i
+                          class="ft-unlock"></i>
+                        Reset Password</button>
+
+                    </form>
+                  </div>
+
+                </div>
+
+
+
+
+              </div>
+            </div>
+          </div>
+        </section>
+
+      </div>
     </div>
   </div>
 
-
-
-</div>
+</body>
