fix load of permit-view on login, logo, user table

--- a/src/app/auth/reset-password/reset-password.component.html
+++ b/src/app/auth/reset-password/reset-password.component.html
@@ -11,6 +11,13 @@
             <div class="col-lg-4 col-md-8 col-10 box-shadow-2 p-0">
               <div class="card border-grey border-lighten-3 ">
 
+                <div class="card-header border-0">
+                  <div class="card-title text-center" style="background: #2C303B;margin: -21px;">
+                    <img src="assets/images/nathanLogos/svg.svg" width="50%" alt="branding logo">
+                  </div>
+                </div>
+
+
                 <div class="login-form">
                   <div class="main-div">
                     <div class="panel">
