--- a/src/app/dashboard/dashboard-tables/dashboard-tables.component.html
+++ b/src/app/dashboard/dashboard-tables/dashboard-tables.component.html
@@ -57,7 +57,7 @@
                           <th>No</th>
                           <th>Fullname</th>
                           <th>Email</th>
-                          <th>Registered On</th>
+                          <!-- <th>Registered On</th> -->
                         </tr>
                       </thead>
                       <tbody>
@@ -69,8 +69,8 @@
                             {{data.full_name}}</td>
                           <td>
                             {{data.email}}</td>
-                          <td>
-                            {{data.registered_at}}</td>
+                          <!-- <td>
+                            {{data.registered_at}}</td> -->
                         </tr>
 
                       </tbody>
